err/currency.converter.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/currency'...
Listing './lib/python3.5/site-packages/currency/converter'...
Listing './lib/python3.5/site-packages/currency/converter/adapters'...
Listing './lib/python3.5/site-packages/currency/converter/browser'...
Listing './lib/python3.5/site-packages/currency/converter/browser/images'...
Listing './lib/python3.5/site-packages/currency/converter/browser/templates'...
Listing './lib/python3.5/site-packages/currency/converter/locales'...
Listing './lib/python3.5/site-packages/currency/converter/locales/en'...
Listing './lib/python3.5/site-packages/currency/converter/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/currency/converter/locales/ja'...
Listing './lib/python3.5/site-packages/currency/converter/locales/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/currency/converter/portlets'...
Listing './lib/python3.5/site-packages/currency/converter/profiles'...
Listing './lib/python3.5/site-packages/currency/converter/profiles/default'...
Listing './lib/python3.5/site-packages/currency/converter/profiles/uninstall'...
Listing './lib/python3.5/site-packages/currency/converter/tests'...
Listing './lib/python3.5/site-packages/currency/converter/tests/integration'...
Listing './lib/python3.5/site-packages/currency/converter/utility'...
Compiling './lib/python3.5/site-packages/currency/converter/utility/price.py'...
***   File "./lib/python3.5/site-packages/currency/converter/utility/price.py", line 25
    print text
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/currency.converter-0.5.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
